refactor: update playbook to apache and use variables to specifiy version and hosts

--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,8 +1,12 @@
 ---
 
-- hosts: all
+- hosts: oracle_vm
   become: true
   tasks: 
+  - name: install updates
+    apt:
+      upgrade: dist
+      update_cache: yes
 
   - name: install apache2 and php
     package:
