--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,11 +4,13 @@
   become: true
   tasks: 
   - name: install updates
+    tags: always
     apt:
       upgrade: dist
       update_cache: yes
 
   - name: install apache2 and php
+    tags: apache,php,ubuntu
     package:
       name: 
         - "{{ apache_package  }}"
