--- a/install_apache.yml
+++ b/install_apache.yml
@@ -17,3 +17,12 @@
         - "{{ php_package }}"
       state: latest
       update_cache: yes
+
+  - name: copy default html file for site
+    tags: apache,php,ubuntu
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644
