--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 inventory = hosts
+
+[ssh_connections]
+pipelining = true
 private_key_file = ~/.ssh/id_rsa
 ansible_python_interpreter = /usr/bin/python3.10
-
-
